# isotreepred

./: CONVERSION_IMPLEMENTATION_SUMMARY.md  EXTRATREES_TO_MONDRIAN_LIMITATIONS.md  EXTRATREES_TO_MONDRIAN_SUMMARY.md  LIMITATIONS.md  MONDRIAN_FOREST_SUMMARY.md  README.md  extratrees_to_iforest.py  extratrees_to_mondrian.py  extratrees_to_mondrian_example.py  mondrian_example.py  mondrian_forest.py  pyproject.toml  test_converter.py  test_extratrees_to_mondrian.py  test_mondrian_forest.py
