[project]
name = "isotreepred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "packaging>=25.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "skl2onnx>=1.19.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
